--- a/slides.tex
+++ b/slides.tex
@@ -143,6 +143,26 @@ def regex = new AnnotationRegex(
 \end{frame}
 %------------------------------------------------------------------------------
 
+%------------------------------------------------------------------------------
+\begin{frame}{Correcting Messy Text}
+
+\begin{tabular}{p{5cm} p{7cm}}
+    \vspace{0pt}
+    \includegraphics[width=0.5\textwidth]{figures/string-alignment.png}
+	\vspace{0pt}
+    \includegraphics[width=0.5\textwidth]{figures/edit-distance-table.png}
+    &
+    \vspace{0pt}
+    \includegraphics[width=0.5\textwidth]{figures/trie-example.png}
+\end{tabular}
+
+\begin{center}
+\url{https://phiresky.github.io/levenshtein-demo}
+\end{center}
+
+\end{frame}
+%------------------------------------------------------------------------------
+
 \section{Advanced NLP: spaCy and textacy}
 
 %------------------------------------------------------------------------------
