--- a/slides.tex
+++ b/slides.tex
@@ -79,6 +79,41 @@
 \end{frame}
 %------------------------------------------------------------------------------
 
+%------------------------------------------------------------------------------
+\begin{frame}{Information Extraction (IE)}
+
+Information Extraction is the process of:
+
+\begin{itemize}
+  \item Finding and understanding relevant parts of texts
+  \item \hspace{1em} and converting them to a structured representation
+  \item \hspace{1em} in order to answer questions like \alert{Who did what to whom?}
+\end{itemize}
+
+\vspace{1em}
+IE converts relevant parts of unstructured text into a \alert{semantically  precise}  form  that  allows  further inferences to be made by computer algorithms. The output of an IE program is \alert{structured data}, such as data in the rows of a table in a relational database. Evaluation uses standard IR metrics (precision, recall, F1).
+
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Motivating Example}
+
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Evaluation Metrics}
+\begin{tabular}{p{5cm} p{7cm}}
+    \vspace{0pt}
+    \includegraphics[width=0.4\textwidth]{figures/precisionrecall.png}
+    &
+    \vspace{0pt}
+    \includegraphics[width=0.5\textwidth]{figures/precisionrecall-formulas.png}
+\end{tabular}
+\end{frame}
+%------------------------------------------------------------------------------
+
 \section{Regular Expressions}
 
 %------------------------------------------------------------------------------
@@ -163,12 +198,12 @@ def regex = new AnnotationRegex(
 \end{frame}
 %------------------------------------------------------------------------------
 
-\section{Advanced NLP: spaCy and textacy}
+\section{Machine Learning}
 
 %------------------------------------------------------------------------------
-% \begin{frame}[fragile]{Jupyter Notebook Demo}
-%
-% \end{frame}
+\begin{frame}[fragile]{Jupyter Notebook Demo}
+
+\end{frame}
 %------------------------------------------------------------------------------
 
 
