slide and notebook updates

--- a/slides.tex
+++ b/slides.tex
@@ -233,7 +233,7 @@ def regex = new AnnotationRegex(
 \begin{tabular}{p{5cm} p{7cm}}
     \vspace{0pt}
     \includegraphics[width=0.5\textwidth]{figures/string-alignment.png}
-	\vspace{0pt}
+	  \vspace{0pt}
     \includegraphics[width=0.5\textwidth]{figures/edit-distance-table.png}
     &
     \vspace{0pt}
@@ -251,6 +251,15 @@ def regex = new AnnotationRegex(
 \section{Model-Based Methods}
 %------------------------------------------------------------------------------
 
+%------------------------------------------------------------------------------
+\begin{frame}{Pipeline of Models}
+
+\begin{center}
+  \includegraphics[width=1.0\textwidth]{figures/pipeline.png}
+\end{center}
+
+\end{frame}
+%------------------------------------------------------------------------------
 
 
 \end{document}
