--- a/slides.tex
+++ b/slides.tex
@@ -166,8 +166,13 @@ Information extraction (IE) can be used to convert some of the information store
 %------------------------------------------------------------------------------
 
 %------------------------------------------------------------------------------
-\begin{frame}{Regular Expressions}
-Finite State Machines
+\begin{frame}{Finite State Machines}
+  \begin{center}
+    \fbox{\includegraphics[scale=0.3]{figures/finite-state-machine.png}}
+  \end{center}
+  \begin{center}
+    \textcolor{blue}{\url{https://www.debuggex.com/}}
+  \end{center}
 \end{frame}
 %------------------------------------------------------------------------------
 
@@ -241,7 +246,7 @@ def regex = new AnnotationRegex(
 \end{tabular}
 
 \begin{center}
-\url{https://phiresky.github.io/levenshtein-demo}
+  \textcolor{blue}{\url{https://phiresky.github.io/levenshtein-demo}}
 \end{center}
 
 \end{frame}
