update to slides

--- a/slides.tex
+++ b/slides.tex
@@ -88,11 +88,13 @@
 \begin{frame}{Unstructured Data}
 \begin{columns}
 \begin{column}{0.5\textwidth}
-Much human knowledge is encoded as \alert{unstructured data}, in the form of natural language text
+Vast quantities of information are encoded as \alert{unstructured data}, in the form of natural language text.
+\\ \vspace{2em}
+But it can be hard to make this information available for computational analysis at scale.
 \end{column}
 \begin{column}{0.5\textwidth}
 \begin{center}
-	\fbox{\includegraphics[scale=0.1]{figures/information.jpg}}
+	\fbox{\includegraphics[scale=0.12]{figures/library.png}}
 \end{center}
 \end{column}
 \end{columns}
@@ -103,14 +105,15 @@ Much human knowledge is encoded as \alert{unstructured data}, in the form of nat
 \begin{frame}{Unstructured Data}
 \begin{columns}
 \begin{column}{0.4\textwidth}
-  But getting at this information can be hard! What a human sees\ldots
+  What a \alert{human} sees:
   \\ \vspace{5em}
-  Is not what a computer sees:
+  What a \alert{computer} sees:
 \end{column}
 \begin{column}{0.6\textwidth}
 \begin{center}
-  \fbox{\includegraphics[scale=0.15]{figures/breast-cancer-note-screenshot.png}}
-  \fbox{\includegraphics[scale=0.21]{figures/breast-cancer-note-screenshot-hex.png}}
+  \fbox{\includegraphics[scale=0.16]{figures/breast-cancer-note-screenshot.png}}
+  \\ \vspace{1em}
+  \fbox{\includegraphics[scale=0.22]{figures/breast-cancer-note-screenshot-hex.png}}
 \end{center}
 \end{column}
 \end{columns}
@@ -134,9 +137,16 @@ Information extraction (IE) can be used to convert some of the information store
 
 \end{frame}
 %------------------------------------------------------------------------------
+%------------------------------------------------------------------------------
+\begin{frame}{Example Use Case}
+  \begin{center}
+    \fbox{\includegraphics[scale=0.5]{figures/official-register.png}}
+  \end{center}
+\end{frame}
+%------------------------------------------------------------------------------
 
 %------------------------------------------------------------------------------
-\begin{frame}{Motivating Example}
+\begin{frame}{Example Use Case}
   \begin{center}
     \fbox{\includegraphics[scale=0.1]{figures/excerpt-p17.png}}
   \end{center}
