slide and notebook updates

--- a/slides.tex
+++ b/slides.tex
@@ -86,18 +86,18 @@
 
 %-----------------------------------------------------------------------------
 \begin{frame}{Unstructured Data}
-\begin{columns}
-\begin{column}{0.5\textwidth}
-Vast quantities of information are encoded as \alert{unstructured data}, in the form of natural language text.
-\\ \vspace{2em}
-But it can be hard to make this information available for computational analysis at scale.
-\end{column}
-\begin{column}{0.5\textwidth}
-\begin{center}
-	\fbox{\includegraphics[scale=0.12]{figures/library.png}}
-\end{center}
-\end{column}
-\end{columns}
+  \begin{columns}
+    \begin{column}{0.5\textwidth}
+      Vast quantities of information are encoded as \alert{unstructured data}, in the form of natural language text.
+      \\ \vspace{2em}
+      But it can be hard to make this information available for computational analysis at scale.
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \begin{center}
+        \fbox{\includegraphics[scale=0.12]{figures/library.png}}
+      \end{center}
+    \end{column}
+  \end{columns}
 \end{frame}
 %-----------------------------------------------------------------------------
 
@@ -172,6 +172,16 @@ Information extraction (IE) can be used to convert some of the information store
   \end{itemize}
   \item \textcolor{blue}{\url{http://web.stanford.edu/~jurafsky/slp3}}
 \end{itemize}
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Regex: Formal Language Theory}
+  \begin{center}
+    \fbox{\includegraphics[scale=0.4]{figures/chomsky-hierarchy.png}}
+  \end{center}
+  \\ \vspace{2em}
+  \alert{Regular Expressions} $\equiv$ \alert{Regular Languages} $\equiv$ \alert{Finite State Machines}
 \end{frame}
 %------------------------------------------------------------------------------
 
