--- a/slides.tex
+++ b/slides.tex
@@ -170,6 +170,7 @@ Information extraction (IE) can be used to convert some of the information store
     \item Ranges: \textcolor{darkred}{\texttt{/[A-Z]/}}, \textcolor{darkred}{\texttt{/[a-z]/}}, \textcolor{darkred}{\texttt{/[0-9]/}}
     \item Classes: \textcolor{darkred}{\texttt{/\textbackslash w/}}, \textcolor{darkred}{\texttt{/\textbackslash s/}}, \textcolor{darkred}{\texttt{/./}}
     \item Optionality: \textcolor{darkred}{\texttt{/colou?rs?/}}
+    \item Anchors: \textcolor{darkred}{\texttt{/\textasciicircum ABC[0-9]+abc\$/}}
   \end{itemize}
 \end{itemize}
 \begin{center}
