--- a/slides.tex
+++ b/slides.tex
@@ -164,13 +164,13 @@ Information extraction (IE) can be used to convert some of the information store
   \item A regex \alert{matches} a set of strings
   \item Regex patterns can contain:
   \begin{itemize}
-    \item Sequences: \textcolor{darkred}{\texttt{/abc/}}
-    \item Disjunctions: \textcolor{darkred}{\texttt{/(a|b|c)/}}
-    \item Repetitions: \textcolor{darkred}{\texttt{/[A-Z]*/}}, \textcolor{darkred}{\texttt{/[0-9]+/}, \textcolor{darkred}{\texttt{/a\{2,3\}b+/}}}
-    \item Ranges: \textcolor{darkred}{\texttt{/[A-Z]/}}, \textcolor{darkred}{\texttt{/[a-z]/}}, \textcolor{darkred}{\texttt{/[0-9]/}}
-    \item Classes: \textcolor{darkred}{\texttt{/\textbackslash w/}}, \textcolor{darkred}{\texttt{/\textbackslash s/}}, \textcolor{darkred}{\texttt{/./}}
-    \item Optionality: \textcolor{darkred}{\texttt{/colou?rs?/}}
-    \item Anchors: \textcolor{darkred}{\texttt{/\textasciicircum ABC[0-9]+abc\$/}}
+    \item Sequences: \textcolor{brown}{\texttt{/abc/}}
+    \item Disjunctions: \textcolor{brown}{\texttt{/(a|b|c)/}}
+    \item Repetitions: \textcolor{brown}{\texttt{/[A-Z]*/}}, \textcolor{brown}{\texttt{/[0-9]+/}, \textcolor{brown}{\texttt{/a\{2,3\}b+/}}}
+    \item Ranges: \textcolor{brown}{\texttt{/[A-Z]/}}, \textcolor{brown}{\texttt{/[a-z]/}}, \textcolor{brown}{\texttt{/[0-9]/}}
+    \item Classes: \textcolor{brown}{\texttt{/\textbackslash w/}}, \textcolor{brown}{\texttt{/\textbackslash s/}}, \textcolor{brown}{\texttt{/./}}
+    \item Optionality: \textcolor{brown}{\texttt{/colou?rs?/}}
+    \item Anchors: \textcolor{brown}{\texttt{/\textasciicircum ABC[0-9]+abc\$/}}
   \end{itemize}
 \end{itemize}
 \begin{center}
@@ -347,10 +347,21 @@ def regex = new AnnotationRegex(
 %------------------------------------------------------------------------------
 
 %------------------------------------------------------------------------------
-\begin{frame}{Pipeline of Models}
+\begin{frame}{Language Processing Pipelines}
 
 \begin{center}
-  \includegraphics[width=1.0\textwidth]{figures/pipeline.png}
+  \includegraphics[width=1.0\textwidth]{figures/spacy-pipeline.png}
+  \\ \vspace{2em}
+  \begin{columns}
+    \begin{column}{0.3\textwidth}
+      \begin{center}
+        \includegraphics[scale=0.18]{figures/spacy-logo.png}
+      \end{center}
+    \end{column}
+    \begin{column}{0.7\textwidth}
+      \fbox{\includegraphics[scale=0.27]{figures/spacy-components.png}}
+    \end{column}
+  \end{columns}
 \end{center}
 
 \end{frame}
