--- a/notebooks/extract-records.ipynb
+++ b/notebooks/extract-records.ipynb
@@ -146,6 +146,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for rec in records[:10]:\n",
+    "    print(f\"{rec}\\n\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,9 +170,10 @@
    "source": [
     "import textdistance as td\n",
     "\n",
-    "states = {\"AK\":\"AK\",\"AL\":\"AL\",\"AZ\":\"AZ\",\"AR\":\"AR\",\"CA\":\"CA\",\"CO\":\"CO\",\"CT\":\"CT\",\"DE\":\"DE\",\"FL\":\"FL\",\"GA\":\"GA\",\"HI\":\"HI\",\"ID\":\"ID\",\"IL\":\"IL\",\"IN\":\"IN\",\"IA\":\"IA\",\"KS\":\"KS\",\"KY\":\"KY\",\"LA\":\"LA\"\\\n",
-    ",\"ME\":\"ME\",\"MD\":\"MD\",\"MA\":\"MA\",\"MI\":\"MI\",\"MN\":\"MN\",\"MS\":\"MS\",\"MO\":\"MO\",\"MT\":\"MT\",\"NE\":\"NE\",\"NV\":\"NV\",\"NH\":\"NH\",\"NJ\":\"NJ\",\"NM\":\"NM\",\"NY\":\"NY\",\"NC\":\"NC\",\"ND\":\"ND\",\"OH\":\"OH\",\"OK\":\"O\\\n",
-    "K\",\"OR\":\"OR\",\"PA\":\"PA\",\"RI\":\"RI\",\"SC\":\"SC\",\"SD\":\"SD\",\"TN\":\"TN\",\"TX\":\"TX\",\"UT\":\"UT\",\"VT\":\"VT\",\"VA\":\"VA\",\"WA\":\"WA\",\"WV\":\"WV\",\"WI\":\"WI\",\"WY\":\"WY\"}\n",
+    "state_abbrevs = [\"AK\",\"AL\",\"AZ\",\"AR\",\"CA\",\"CO\",\"CT\",\"DE\",\"FL\",\"GA\",\"HI\",\"ID\",\"IL\",\"IN\",\"IA\",\"KS\",\"KY\",\"LA\",\"ME\",\"MD\",\"MA\",\"MI\",\"MN\",\"MS\",\"MO\",\"MT\",\"NE\",\"NV\",\"NH\",\"NJ\",\"NM\",\"NY\",\"NC\",\"ND\",\"OH\",\"\\\n",
+    "OK\",\"OR\",\"PA\",\"RI\",\"SC\",\"SD\",\"TN\",\"TX\",\"UT\",\"VT\",\"VA\",\"WA\",\"WV\",\"WI\",\"WY\"]\n",
+    "\n",
+    "states = {s:s for s in state_abbrevs}\n",
     "\n",
     "states['DC'] = 'DC'\n",
     "states['MASS'] = 'MA'\n",
@@ -188,6 +199,16 @@
     "        state = rec.state\n",
     "        l = [td.levenshtein(s, rec.state) for s in state_keys]\n",
     "        rec.state = states[state_keys[l.index(min(l))]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = {rec.state for rec in records}\n",
+    "print(s)"
    ]
   },
   {
@@ -387,6 +408,13 @@
     "print(sents[7])\n",
     "displacy.render(sents[7], style='dep', jupyter=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
