--- a/slides.tex
+++ b/slides.tex
@@ -257,6 +257,10 @@ Information extraction (IE) can be used to convert some of the information store
 %------------------------------------------------------------------------------
 
 %------------------------------------------------------------------------------
+\section{Advanced Pattern Matching}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
 \begin{frame}[fragile]{Annotation Pattern Matching}
 
 \begin{lstlisting}[frame=single]
@@ -344,10 +348,6 @@ def regex = new AnnotationRegex(
 
 \end{frame}
 %-----------------------------------------------------------------------------
-
-%------------------------------------------------------------------------------
-\section{Model-Based Methods}
-%------------------------------------------------------------------------------
 
 %------------------------------------------------------------------------------
 \begin{frame}{Language Processing Pipelines}
