--- a/slides.tex
+++ b/slides.tex
@@ -370,5 +370,15 @@ def regex = new AnnotationRegex(
 \end{frame}
 %------------------------------------------------------------------------------
 
+%------------------------------------------------------------------------------
+\begin{frame}{spaCy Architecture}
+
+\begin{center}
+  \includegraphics[width=0.85\textwidth]{figures/architecture.png}
+\end{center}
+
+\end{frame}
+%------------------------------------------------------------------------------
+
 
 \end{document}
