--- a/slides.tex
+++ b/slides.tex
@@ -188,7 +188,9 @@ Information extraction (IE) can be used to convert some of the information store
     \fbox{\includegraphics[scale=0.3]{figures/finite-state-machine.png}}
   \end{center}
   \begin{center}
-    \textcolor{blue}{\url{https://www.debuggex.com/}}
+    \textcolor{blue}{\url{https://www.debuggex.com}}
+    \\ \vspace{1em}
+    \textcolor{blue}{\url{https://jex.im/regulex}}
   \end{center}
 \end{frame}
 %------------------------------------------------------------------------------
@@ -208,9 +210,9 @@ Information extraction (IE) can be used to convert some of the information store
 \begin{center}
   \includegraphics[scale=0.25]{figures/regex101-screenshot.png}
   \\ \vspace{1em}
-  \textcolor{blue}{\url{https://regex101.com/}}
+  \textcolor{blue}{\url{https://regex101.com}}
   \\
-  (For fun: \textcolor{blue}{\url{https://regexcrossword.com/}})
+  (For fun: \textcolor{blue}{\url{https://regexcrossword.com}})
 \end{center}
 
 \end{frame}
